IW-I2-dots fix dots on mobile menu

--- a/src/widgets/Header/style.module.scss
+++ b/src/widgets/Header/style.module.scss
@@ -175,14 +175,15 @@
         }
       }
 
-      .socialMedia {
+      .dotsSocialMedia {
         width: 100%;
         height: 125px;
         justify-content: center;
         display: flex;
         align-items: center;
 
-        > div {
+        .socialMedia {
+          padding: 10px 20px;
           gap: rem(28px);
 
           > button {
